[project]
name = "loki-reader-core"
version = "0.2.0"
authors = [
  { name="Jason Byteforge", email="jason@mzmail.me" },
]
description = "Python library for querying Grafana Loki logs via REST API"
keywords = ["loki", "grafana", "logging", "logs", "observability"]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loki_reader_core"]

[project.urls]
Homepage = "https://github.com/jmazzahacks/loki-reader-core"
Issues = "https://github.com/jmazzahacks/loki-reader-core/issues"
